# qewan

./: .assistant_hint  .gitignore  README.md  WORK_PLAN.md  pseudos_sssp_report.json  pyproject.toml  requirements.txt
qewan/: __init__.py  cli.py  cluster.py  io.py
scripts/: generate_flow_workdir.py
templates/: slurm_template.sh
tests/: check_pseudos.py
tests/cifs/: Co-hcp.cif  Fe-bcc.cif  Fe-fcc.cif  FeO.cif  GdCo2.cif  GdCu.cif  GdNi4Al.cmmm.cif  Gd_hcp.cif  SrMnO3.cif
tests/flows/Fe-bcc/: Fe_bcc.win  README.md  bands.in  nscf.in  projwfc.in  pw2wan.in  run_flow.sh  scf.in
tests/flows/Fe-bcc/qewan_bands/: pw.bands.in
tests/flows/Fe-bcc/qewan_nscf/: kpoints_list.txt  pw.nscf.in
tests/flows/Fe-bcc/qewan_projwfc/: projwfc.in
tests/flows/Fe-bcc/qewan_scf/: pw.scf.in
tests/flows/Fe-bcc/qewan_wan/: Fe_bcc.win  pw2wannier.in  pw2wannier_dn.in  pw2wannier_up.in
tests/flows/SrMnO3/qewan_bands/: pw.bands.in
tests/flows/SrMnO3/qewan_nscf/: pw.nscf.in
tests/flows/SrMnO3/qewan_scf/: pw.scf.in
tests/flows/SrMnO3/qewan_wan/: qewan_dn.win
tmp_pseudos_test/: Mn.UPF
